find_package(Doxygen)
if(DOXYGEN_FOUND)
	set(TINYSPLINE_DOXYGEN_DIR          "doxygen" CACHE INTERNAL "")
	set(TINYSPLINE_DOXYGEN_CONF_FILE    "doxygen.conf" CACHE INTERNAL "")

	set(TINYSPLINE_DOXYGEN_INPUT_DIR    "${CMAKE_CURRENT_SOURCE_DIR}/${TINYSPLINE_DOXYGEN_DIR}" CACHE INTERNAL "")
	set(TINYSPLINE_DOXYGEN_OUTPUT_DIR   "${CMAKE_CURRENT_BINARY_DIR}/${TINYSPLINE_DOXYGEN_DIR}" CACHE INTERNAL "")
	set(TINYSPLINE_DOXYGEN_CONF_FILE_IN "${TINYSPLINE_DOXYGEN_INPUT_DIR}/${TINYSPLINE_DOXYGEN_CONF_FILE}.in" CACHE INTERNAL "")
	set(TINYSPLINE_DOXYGEN_INPUT_FILE   "${CMAKE_CURRENT_BINARY_DIR}/${TINYSPLINE_DOXYGEN_CONF_FILE}" CACHE INTERNAL "")

	configure_file(
		"${TINYSPLINE_DOXYGEN_CONF_FILE_IN}"
		"${TINYSPLINE_DOXYGEN_INPUT_FILE}"
		@ONLY
	)
	add_custom_command(
		OUTPUT
			"${TINYSPLINE_DOXYGEN_OUTPUT_DIR}"
		COMMAND
			"${DOXYGEN_EXECUTABLE}" "${TINYSPLINE_DOXYGEN_INPUT_FILE}"
		DEPENDS
			"${CMAKE_SOURCE_DIR}/src"
			"${CMAKE_SOURCE_DIR}/README.md"
			"${TINYSPLINE_DOXYGEN_INPUT_FILE}"
		VERBATIM
	) # COMMENT "Generating API documentation with Doxygen"
	add_custom_target(docs DEPENDS "${TINYSPLINE_DOXYGEN_OUTPUT_DIR}")
endif()
